Form into DIV and update CSS

--- a/responsive-web-design/build-a-survey.html
+++ b/responsive-web-design/build-a-survey.html
@@ -9,7 +9,8 @@
 <body>
     <h1 id="title">The Survey</h1>
     <p id="description">This is a short survey project with freecodecamp.</p>
-    <form id="survey-form">
+<div id="conteiner">    
+<form id="survey-form">
         <p>
             <label id="name-label">Name</label>:
             <input id="name" type="text" required placeholder="Jon Doe">
@@ -51,5 +52,6 @@
         </p>
         <input type="submit" id="submit">
     </form>
+</div>
 </body>
 </html>
