Moved container div

--- a/responsive-web-design/build-a-survey.html
+++ b/responsive-web-design/build-a-survey.html
@@ -7,9 +7,9 @@
     <title>The Survey</title>
 </head>
 <body>
+    <div id="container">
     <h1 id="title">The Survey</h1>
     <p id="description">This is a short survey project with freecodecamp.</p>
-<div id="conteiner">    
 <form id="survey-form">
         <p>
             <label id="name-label">Name</label>:
