Update the alt for the image

--- a/responsive-web-design/tribute-page.html
+++ b/responsive-web-design/tribute-page.html
@@ -10,7 +10,7 @@
     <main id="main">
         <h1 id="title">Tribute to Avicii</h1>
         <div id="img-div">
-            <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Avicii_2014_003.jpg/800px-Avicii_2014_003.jpg" alt="Avicii">
+            <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Avicii_2014_003.jpg/800px-Avicii_2014_003.jpg" alt="alt="Portrait of Tim Bergling, better known as Avicii"">
             <p id="img-caption">Tim Bergling, better known as Avicii</p>
         </div>
         <p id="tribute-info">
